--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- Plugin: jQuery -->
+    <script src="./plugin/jquery-3.7.1.min.js"></script>
 </head>
 
 <body>
