refactor: change nav style
- make nav position to sticky
- change nav background to blur
- add nav link hover effect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Header -->
-    <header class="main-header p-[12px]">
+    <header class="main-header p-[12px] sticky top-0 blur">
         <!-- Logo -->
         <div class="main-logo"></div>
 
@@ -27,8 +27,6 @@
             <a href="#message-us">Message Us</a>
         </nav>
     </header>
-
-    <hr />
 
     <!-- Main Content -->
     <main>
