--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Home Section -->
         <section id="home" class="min-h-[250px] text-center">
             <header class="py-[32px] text-center">
-                <h2>Welcome to My Website</h2>
+                <h2>Welcome</h2>
             </header>
 
             <!-- Banner -->
