--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Yama</title>
+    <title>Company Profile STMIK Sinar Nusantara Surakarta</title>
 
     <!-- CSS External -->
     <link rel="stylesheet" href="css/style.css">
