--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company Profile STMIK Sinar Nusantara Surakarta</title>
+    <link rel="icon" type="image/x-icon" href="./img/logo.png">
 
     <!-- CSS External -->
     <link rel="stylesheet" href="css/style.css">
