feat: add our profile section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="./plugin/jquery-3.7.1.min.js"></script>
 
     <!-- JS External -->
-     <script src="./js/banner.js"></script>
+    <script src="./js/banner.js"></script>
 </head>
 
 <body>
@@ -59,13 +59,98 @@
         <!-- /.Home Section -->
 
         <!-- Our Profile Section -->
-        <section id="our-profile" class="min-h-[250px]  text-center">
-            <header class="py-[32px]">
-                <h2>Our Profile</h2>
-            </header>
+        <section id="our-profile" class="min-h-[250px]">
+            <div class="py-[32px] text-center">
+                <b class="text-lg">STMIK Sinar Nusantara Surakarta</b>
+            </div>
 
-            <article>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <article class="flex flex-col px-5 md:px-20">
+
+                <!-- Visi -->
+                <div class="flex flex-col mb-5">
+                    <b class="mb-2">VISI STMIK SINUS</b><br>
+
+                    <p class="pb-3">
+                        Mewujudkan STMIK Sinar Nusantara pada tahun 2030 menjadi sekolah tinggi yang
+                        menyelenggarakan jenis pendidikan vokasi dan akademik pada bidang teknologi
+                        informasi dan komunikasi yang unggul tingkat nasional dan senantiasa mengikuti
+                        perubahan ICT dalam upaya menghasilkan lulusan yang berkepribadian, berintegritas
+                        dan profesional serta berjiwa kewirausahaan.
+                    </p>
+
+                    <div class="mb-2">
+                        Visi tersebut dipandang sangat jelas dan realistik karena memenuhi aspek sebagai
+                        berikut:
+                    </div>
+                    <ol class="list-decimal ps-5">
+                        <li>
+                            Fleksibel: Visi terbuka untuk melakukan penyesuaian terhadap perkembangan
+                            keilmuan Information and Communication Technology (ICT). Fleksibilitas
+                            menunjukkan bahwa STMIK Sinar Nusantara akan mengikuti trend perkembangan
+                            teknologi, sosial, budaya dan Information and Communication Technology (ICT).
+                        </li>
+                        <li>
+                            Fokus dan terukur: Visi STMIK Sinar Nusantara ditinjau dari waktu dan
+                            cakupannya merupakan visi yang terukur dan memiliki rentang waktu yang
+                            jelas yakni 2014-2030.
+                        </li>
+                        <li>
+                            Memiliki visi untuk menjadi PT unggulan di tingkat nasional, stakeholder
+                            akan memilih STMIK Sinar Nusantara apabila ingin menjadi sarjana dan ahli
+                            madya yang berkompeten dibidang ICT serta memiliki jiwa wirausaha,
+                            profesional dan berintegritas.
+                        </li>
+                    </ol>
+                </div>
+                <!-- /.Visi -->
+
+                <!-- Misi -->
+                <div class="flex flex-col mb-3">
+                    <b class="mb-2">MISI STMIK SINUS</b><br>
+
+                    <div class="mb-3">
+                        <div class="mb-1">Misi Umum:</div>
+                        <p>
+                            Membentuk Sarjana dan Ahli Madya di bidang ICT yang handal dan memiliki
+                            daya saing dalam era globalisasi untuk membangun masa depan Indonesia.
+                        </p>
+                    </div>
+                    <div class="mb-3">
+                        <div class="mb-1">Misi Khusus:</div>
+                        <ol class="list-decimal ps-5">
+                            <li>
+                                Menyelenggarakan pendidikan yang profesional dan tata pamong yang baik di bidangnya yang
+                                berwawasan nasional, berjiwa Pancasila dan bermoral, jujur, berbudi pekerti yang luhur
+                            </li>
+                            <li>
+                                Selalu meningkatkan standard mutu pendidikan teknologi informasi dan komunikasi sesuai
+                                perkembangan teknologi yang ada dan sesuai dengan kebutuhan masyarakat dan dunia
+                                industri
+                            </li>
+                            <li>
+                                Selalu meningkatkan mutu sumber daya manusia melalui pendidikan bergelar maupun tidak
+                                bergelar dalam rangka mempersiapkan dan membekali lulusan dengan kompetensi dalam bidang
+                                informasi dan komunikasi agar mampu memenuhi kebutuhan di pasar kerja
+                            </li>
+                            <li>
+                                Meningkatkan mutu pendidikan dengan selalu menyesuaikan perkembangan ilmu pengetahuan
+                                dan teknologi dan menyesuaikan dengan kebutuhan masyarakat dan industri untuk
+                                menyelenggarakan kurikulum yang fleksibel dan berkelanjutan dalam rangka menghasilkan
+                                lulusan yang unggul di bidangnya
+                            </li>
+                            <li>
+                                Melaksanakan kegiatan pengabdian kepada masyarakat berdasarkan hasil – hasil penelitian
+                                untuk menyelesaikan masalah aktual di masyarakat.
+                            </li>
+                            <li>
+                                Menjalin kerja sama dengan dunia industri untuk mewujudkan keterkaitan dan kecocokan
+                                antara kurikulum pendidikan dengan kebutuhan dunia industri sehingga dapat tercapai
+                                sinerginya mutu lulusan dengan kebutuhan dunia industri.
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+                <!-- /.Misi -->
             </article>
         </section>
 
