refactor: adjust bottom margin

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- /.Home Section -->
 
         <!-- Our Profile Section -->
-        <section id="our-profile" class="min-h-[250px]">
+        <section id="our-profile" class="min-h-[250px] mb-5">
             <div class="py-[32px] text-center">
                 <b class="text-lg">STMIK Sinar Nusantara Surakarta</b>
             </div>
@@ -104,7 +104,7 @@
                 <!-- /.Visi -->
 
                 <!-- Misi -->
-                <div class="flex flex-col mb-3">
+                <div class="flex flex-col">
                     <b class="mb-2">MISI STMIK SINUS</b><br>
 
                     <div class="mb-3">
@@ -114,7 +114,7 @@
                             daya saing dalam era globalisasi untuk membangun masa depan Indonesia.
                         </p>
                     </div>
-                    <div class="mb-3">
+                    <div>
                         <div class="mb-1">Misi Khusus:</div>
                         <ol class="list-decimal ps-5">
                             <li>
