refactor: make home header text bold and larger

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Home Section -->
         <section id="home" class="min-h-[250px] text-center">
             <header class="py-[32px] text-center">
-                <h2>Welcome</h2>
+                <b class="text-lg">Welcome</b>
             </header>
 
             <!-- Banner -->
