--- a/index.html
+++ b/index.html
@@ -154,10 +154,24 @@
         </section>
 
         <!-- Portfolio Section -->
-        <section id="portfolio" class="min-h-[250px]  text-center">
-            <article>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
+        <section id="portfolio" class="min-h-[250px] mb-5 text-center">
+            <div class="py-[32px] text-center">
+                <b class="text-lg">Portfolio</b>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-10 mx-5 md:mx-20">
+                <div class="aspect-square mx-auto max-h-[350px] md:max-h-[auto]">
+                    <img src="./img/portfolio1.jpg" class="h-[100%] w-[100%] rounded-full drop-shadow hover-effect">
+                </div>
+
+                <div class="aspect-square mx-auto max-h-[350px] md:max-h-[auto]">
+                    <img src="./img/portfolio2.jpg" class="h-[100%] w-[100%] rounded-full drop-shadow hover-effect">
+                </div>
+
+                <div class="aspect-square mx-auto max-h-[350px] md:max-h-[auto]">
+                    <img src="./img/portfolio3.jpg" class="h-[100%] w-[100%] rounded-full drop-shadow hover-effect">
+                </div>
+            </div>
         </section>
 
         <hr />
