refactor: make message us header text bold and larger

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
 
         <!-- Message Us Section -->
         <section id="message-us" class="min-h-[250px]">
-            <header class="py-[32px] text-center">
-                <h2>Message Us</h2>
-            </header>
+            <div class="py-[32px] text-center">
+                <b class="text-lg">Message Us</b>
+            </div>
 
             <div class="flex justify-between items-center px-[16px]">
                 <!-- Message Form -->
