--- a/index.html
+++ b/index.html
@@ -180,25 +180,58 @@
                 <b class="text-lg">Message Us</b>
             </div>
 
-            <div class="flex justify-between items-center px-[16px]">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-10 px-5">
                 <!-- Message Form -->
-                <form>
-                    <div>
-                        <label for="name-input">Name:</label>
-                        <input type="text" id="name-input" name="name"
-                            class="border border-gray-300 rounded p-[8px] w-full">
+                <form id="formMessageUs" class="flex flex-col">
+                    <div class="flex flex-col mb-4">
+                        <label for="inputNama" class="mb-1">Nama:</label>
+                        <input type="text" id="inputNama" name="nama"
+                            class="border border-gray-400 rounded p-[8px] w-full">
                     </div>
 
-                    <div class="py-[16px]">
-                        <button type="button" class="border rounded p-[8px] bg-blue-200 text-white"
-                            onclick="validateForm();">Send
-                            Message</button>
+                    <div class="flex flex-col mb-4">
+                        <label for="inputEmail" class="mb-1">Email:</label>
+                        <input type="email" id="inputEmail" name="email"
+                            class="border border-gray-400 rounded p-[8px] w-full">
+                    </div>
+
+                    <div class="flex flex-col mb-4">
+                        <label for="inputTelepon" class="mb-1">Telepon:</label>
+                        <input type="tel" id="inputTelepon" name="telepon" pattern="[0-9]{10,13}"
+                            class="border border-gray-400 rounded p-[8px] w-full">
+                    </div>
+
+                    <div class="flex flex-col mb-4">
+                        <label class="mb-1">Jenis kelamin:</label>
+                        <div class="flex flex-nowrap">
+                            <span class="me-3">
+                                <input type="radio" id="inputMale" name="inputJenisKelamin" value="male">
+                                <label for="inputMale">Laki - laki</label>
+                            </span>
+                            <span>
+                                <input type="radio" id="inputFemale" name="inputJenisKelamin" value="female">
+                                <label for="inputFemale">Perempuan</label>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col mb-4">
+                        <label for="inputPesan" class="mb-1">Pesan:</label>
+                        <textarea id="inputPesan" class="border border-gray-400 rounded p-[8px] w-full" rows="5"></textarea>
+                    </div>
+
+                    <div class="py-[16px] mx-auto">
+                        <button type="submit" class="border rounded p-[8px] bg-blue-700 text-white">
+                            Send Message
+                        </button>
                     </div>
                 </form>
 
                 <!-- Result Form -->
-                <aside class="py-[16px]">
-                    <p id="result-form">Thank you for your message!</p>
+                <aside>
+                    <div id="formResult" class="flex flex-col justify-center w-full min-h-[100px]">
+                        <b class="mx-auto text-green-700">Thank you for your message!</b>
+                    </div>
                 </aside>
             </div>
         </section>
