--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                     <div class="flex flex-col mb-4">
                         <label for="inputTelepon" class="mb-1">Telepon:</label>
-                        <input type="tel" id="inputTelepon" name="telepon" pattern="[0-9]{10,13}"
+                        <input type="tel" id="inputTelepon" name="telepon"
                             class="border border-gray-400 rounded p-[8px] w-full">
                     </div>
 
