--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
 
                     <div class="flex flex-col mb-4">
                         <label for="inputPesan" class="mb-1">Pesan:</label>
-                        <textarea id="inputPesan" class="border border-gray-400 rounded p-[8px] w-full" rows="5"></textarea>
+                        <textarea id="inputPesan" class="border border-gray-400 rounded p-[8px] w-full"
+                            rows="5"></textarea>
                     </div>
 
                     <div class="py-[16px] mx-auto">
@@ -237,10 +238,24 @@
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="text-center">
-        <p>&copy; 2025 My Website</p>
+    <!--begin::Footer-->
+    <footer class="flex items-center w-full px-4 blur"
+        style="min-height: 3rem; border-top: 1px solid #dee2e6; font-size: 13.5px">
+        <!--begin::Copyright-->
+        <span class="me-auto">
+            <span class="font-semibold">
+                Copyright &copy; 2025.
+                <a href="mailto:puyoodev@gmail.com" class="underline decoration-solid">puyoodev.</a>
+            </span>
+            All rights reserved.
+        </span>
+        <!--end::Copyright-->
+
+        <!--begin::To the end-->
+        <span class="ms-auto hidden md:inline">STMIK Sinar Nusantara Surakarta</span>
+        <!--end::To the end-->
     </footer>
+    <!--end::Footer-->
 
     <!-- JS External -->
     <script src="js/script.js"></script>
