refactor: add margin bottom message us section

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </section>
 
         <!-- Message Us Section -->
-        <section id="message-us" class="min-h-[250px]">
+        <section id="message-us" class="min-h-[250px] mb-5">
             <div class="py-[32px] text-center">
                 <b class="text-lg">Message Us</b>
             </div>
