--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <main>
         <!-- Home Section -->
         <section id="home" class="min-h-[250px] text-center">
-            <header class="py-[32px] text-center">
+            <div class="py-[32px] text-center">
                 <b class="text-lg">Welcome</b>
-            </header>
+            </div>
 
             <!-- Banner -->
             <div class="slideshow-container h-[250px]">
