fix: prompt input not updating home section header text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <!-- Home Section -->
         <section id="home" class="min-h-[250px] text-center">
-            <div class="py-[32px] text-center">
+            <div id="homeHeader" class="py-[32px] text-center">
                 <b class="text-lg">Welcome</b>
             </div>
 
