refactor: adjust responsive image width on portfolio section

--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-10 mx-5 md:mx-20">
-                <div class="aspect-square mx-auto max-h-[350px] md:max-h-[auto]">
+                <div class="aspect-square mx-auto w-[75%] md:w-[auto]">
                     <img src="./img/portfolio1.jpg" class="h-[100%] w-[100%] rounded-full drop-shadow hover-effect">
                 </div>
 
-                <div class="aspect-square mx-auto max-h-[350px] md:max-h-[auto]">
+                <div class="aspect-square mx-auto w-[75%] md:w-[auto]">
                     <img src="./img/portfolio2.jpg" class="h-[100%] w-[100%] rounded-full drop-shadow hover-effect">
                 </div>
 
-                <div class="aspect-square mx-auto max-h-[350px] md:max-h-[auto]">
+                <div class="aspect-square mx-auto w-[75%] md:w-[auto]">
                     <img src="./img/portfolio3.jpg" class="h-[100%] w-[100%] rounded-full drop-shadow hover-effect">
                 </div>
             </div>
